基础架构搭建

--- a/VPN/Business/VPN.Core.IServices/VPN.Core.IServices.csproj
+++ b/VPN/Business/VPN.Core.IServices/VPN.Core.IServices.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBaseService.cs" />
+    <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
