--- a/VPN/Repositories/VPN.Core.IRepositories/VPN.Core.IRepositories.csproj
+++ b/VPN/Repositories/VPN.Core.IRepositories/VPN.Core.IRepositories.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBaseRepository.cs" />
+    <Compile Include="IUserRepository.cs" />
+    <Compile Include="IVpnRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
