--- a/VPN/Business/VPN.Core.Services/VPN.Core.Services.csproj
+++ b/VPN/Business/VPN.Core.Services/VPN.Core.Services.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="BaseService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\VPN.Entities\VPN.Core.Entities.csproj">
