--- a/VPN/Core/VPN.Core.Mapping/VPN.Core.Mapping.csproj
+++ b/VPN/Core/VPN.Core.Mapping/VPN.Core.Mapping.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{068FD271-4ADD-42DB-ACAC-587A221123BB}</ProjectGuid>
+    <ProjectGuid>{DAE86E20-86AA-47B9-9259-DA72BB5F2152}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VPN.Core.Services</RootNamespace>
-    <AssemblyName>VPN.Core.Services</AssemblyName>
+    <RootNamespace>VPN.Core.Mapping</RootNamespace>
+    <AssemblyName>VPN.Core.Mapping</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,43 +30,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.AspNet.Identity.Core">
-      <HintPath>..\..\packages\Microsoft.AspNet.Identity.Core.2.1.0\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ServiceBase.cs" />
+    <Compile Include="OrderMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserService.cs" />
-    <Compile Include="VpnService.cs" />
+    <Compile Include="UserMap.cs" />
+    <Compile Include="VpnInfoMap.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\VPN.Entities\VPN.Core.Entities.csproj">
+    <ProjectReference Include="..\VPN.Entities\VPN.Core.Entities.csproj">
       <Project>{6ca1a08b-d5a7-4233-9b11-d051d95e23a0}</Project>
       <Name>VPN.Core.Entities</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Repositories\VPN.Core.IRepositories\VPN.Core.IRepositories.csproj">
-      <Project>{ccb6477c-f7fe-438f-b29a-1f9b713e520e}</Project>
-      <Name>VPN.Core.IRepositories</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Repositories\VPN.Core.Repositories\VPN.Core.Repositories.csproj">
-      <Project>{a47cc620-4e12-4e37-8679-9a93d5f9340c}</Project>
-      <Name>VPN.Core.Repositories</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\VPN.Core.IServices\VPN.Core.IServices.csproj">
-      <Project>{32b02295-4b94-478c-89b7-f1a3be44b84d}</Project>
-      <Name>VPN.Core.IServices</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <Reference Include="FluentNHibernate">
+      <HintPath>..\..\RefDll\FluentNHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate">
+      <HintPath>..\..\RefDll\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
