--- a/VPN/Business/VPN.Core.IServices/VPN.Core.IServices.csproj
+++ b/VPN/Business/VPN.Core.IServices/VPN.Core.IServices.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IOrderService.cs" />
     <Compile Include="IServiceBase.cs" />
     <Compile Include="IUserService.cs" />
     <Compile Include="IVpnService.cs" />
