--- a/VPN/Business/VPN.Core.Services/VPN.Core.Services.csproj
+++ b/VPN/Business/VPN.Core.Services/VPN.Core.Services.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OrderService.cs" />
     <Compile Include="ServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserService.cs" />
