--- a/VPN/Repositories/VPN.Core.IRepositories/VPN.Core.IRepositories.csproj
+++ b/VPN/Repositories/VPN.Core.IRepositories/VPN.Core.IRepositories.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IBaseRepository.cs" />
+    <Compile Include="IOrderRepostitory.cs" />
     <Compile Include="IUserRepository.cs" />
     <Compile Include="IVpnRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
