--- a/VPN/Repositories/VPN.Core.Repositories/VPN.Core.Repositories.csproj
+++ b/VPN/Repositories/VPN.Core.Repositories/VPN.Core.Repositories.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OrderRepository.cs" />
     <Compile Include="RepositoryBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserRepository.cs" />
